--- a/public/project/forgotpassword.html
+++ b/public/project/forgotpassword.html
@@ -12,7 +12,7 @@
     <link rel = "stylesheet" href = "css/dashboard.css">
     <link rel = "stylesheet" href = "css/style.css">
 
-    <title>Log in</title>
+    <title>Forgot Password</title>
 </head>
 <body>
 
@@ -31,7 +31,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Sign Up</a></li>
-                <li class="active"><a href="login.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div>
     </div>
@@ -40,52 +40,42 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-11 col-md-offset-0">
-            <h2 class="page-header col-sm-offset-1 col-sm-10 text-center">Login</h2>
+            <h2 class="page-header col-sm-offset-1 col-sm-10 text-center">Can't Get In?</h2>
+            <p class="col-sm-offset-1 col-sm-10 text-center">Not a problem. Enter your email address below and we’ll
+            send you a link to reset your password.</p>
             <form class="form-horizontal">
                 <div class="form-group">
                     <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="username" placeholder="Username">
+                            <input type="text" class="form-control" id="username" placeholder="Email">
                             <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
+                            <i class="glyphicon glyphicon-envelope"></i>
                             </span>
                         </div>
 
                     </div>
                 </div>
                 <div class="form-group">
-                    <!--<label for="password" class="col-sm-2">Password:</label>-->
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="input-group">
-                            <input type="password" class="form-control" id="password" placeholder="Password">
-                            <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-lock"></i>
-                            </span>
-                        </div>
-                        <a href="forgotpassword.html"><p id="fpswd">(Forgot Password?)</p></a>
-                    </div>
-                </div>
-                <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
-                        <a href="#" class="btn btn-success btn-block top-margin">Login</a>
+                        <a href="#" class="btn btn-success btn-block">Submit</a>
                         <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10 text-center">
-                    <h4>New to Eat'n'Review?</h4>
-                    <h4>Sign up <a href="register.html">here</a></h4>
+                        <h4>Return to Login?</h4>
+                        <h4>Login in <a href="login.html">here</a></h4>
                     </div>
                 </div>
             </form>
         </div>
     </div>
     <!--<div class="row">-->
-        <!--<div class=" form-group col-xs-8 text-center col-xs-offset-2">-->
-            <!--<p>New to Eat'n'Review?</p>-->
-            <!--<p>Sign Up <a href="#">here</a></p>-->
-        <!--</div>-->
+    <!--<div class=" form-group col-xs-8 text-center col-xs-offset-2">-->
+    <!--<p>New to Eat'n'Review?</p>-->
+    <!--<p>Sign Up <a href="#">here</a></p>-->
+    <!--</div>-->
     <!--</div>-->
 </div>
 
