--- a/public/project/register.html
+++ b/public/project/register.html
@@ -47,19 +47,19 @@
                     <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="firstname" placeholder="Firstname">
+                            <input type="text" class="form-control" id="firstname" placeholder="First name">
                             <span class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
                             </span>
                         </div>
 
                     </div>
-                    </div>
+                </div>
 
                     <div class="form-group">
                         <div class="col-sm-10 col-sm-offset-1">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="lastname" placeholder="Lastname">
+                                <input type="text" class="form-control" id="lastname" placeholder="Last name">
                                 <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-user"></i>
                                 </span>
@@ -90,7 +90,7 @@
                     <!--<label for="password" class="col-sm-2">Password:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="username" placeholder="UserName">
+                            <input type="text" class="form-control" id="username" placeholder="Username">
                             <span class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
                             </span>
