developed search result page for POC in javascript and html

--- a/public/project/home.html
+++ b/public/project/home.html
@@ -44,13 +44,13 @@
             <form action="searchdetails.html" method="GET">
                 <div class="row col-xs-12 searchbox width-colxs12 widthxsscreen">
                     <div class="col-sm-5 col-md-5">
-                        <input id="restNametxt" type="text" class="form-control margin-searchbox" name="restName" placeholder="Burger...Sushi(optional)">
+                        <input id="restName" type="text" class="form-control margin-searchbox" name="restName" placeholder="Burger...Sushi(optional)">
                     </div>
                     <div class="col-sm-4 col-md-4">
-                        <input id="locationtxt" type="text" class="form-control margin-searchbox" name="location" placeholder="Boston">
+                        <input id="location" type="text" class="form-control margin-searchbox" name="location" placeholder="Boston">
                     </div>
                     <div class="col-sm-3 col-md-3">
-                        <button id="searchRestbtn" type="submit" class="btn btn-primary btn-block">Find Food</button>
+                        <button id="searchbtn" type="submit" class="btn btn-primary btn-block">Find Food</button>
                     </div>
 
             </div>
