Added meta tag for better mobile view

--- a/public/project/home.html
+++ b/public/project/home.html
@@ -5,7 +5,7 @@
     <!-- IE Edge Meta Tag -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Viewport : This is for the display on smaller devices such as mobile, tab etc.-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -205,8 +205,8 @@
                 <a href="" target="_blank" >Some Link</a>
             </p>
 
-            <a href="#" class="navbar-btn btn-danger btn pull-right">
-                <span class="glyphicon glyphicon-star"></span>Eat'n'Review</a>
+            <!--<a href="#" class="navbar-btn btn-danger btn pull-right">-->
+                <!--<span class="glyphicon glyphicon-star"></span>Eat'n'Review</a>-->
         </div>
     </div>
 
