Worked on implementing User services

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -18,6 +18,7 @@
     <script src="views/main/main.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
+    <script src="services/user.service.client.js"></script>
 
 
     <title> Form Builder App</title>
