--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -19,6 +19,7 @@
     <script src="views/header/header.controller.js"></script>
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="views/users/register.controller.js"></script>
 
 
     <title> Form Builder App</title>
