--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -20,6 +20,7 @@
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="services/user.service.client.js"></script>
     <script src="views/users/register.controller.js"></script>
+    <script src="views/users/profile.controller.js"></script>
 
 
     <title> Form Builder App</title>
