--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -21,6 +21,7 @@
     <script src="services/user.service.client.js"></script>
     <script src="views/users/register.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
+    <script src="views/users/login.controller.js"></script>
 
 
     <title> Form Builder App</title>
