--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -22,6 +22,8 @@
     <script src="views/users/register.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
+    <script src="services/forms.service.client.js"></script>
+    <script src="views/forms/forms.controller.js"></script>
 
 
     <title> Form Builder App</title>
