--- a/public/experiments/angular/angular-api/index.html
+++ b/public/experiments/angular/angular-api/index.html
@@ -5,12 +5,16 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+    <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+    <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+    <script src = "oauth.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="navigation/navigation.controller.js"></script>
     <script src="search/search.controller.js"></script>
-    <!--<script src="search/detail.controller.js"></script>-->
-    <!--<script src="services/omdbapi.service.js"></script>-->
+    <script src="services/yelp.service.js"></script>
+    <script src="search/searchdetails.controller.js"></script>
+
     <meta charset="UTF-8">
     <title>Yelp API</title>
 </head>
