--- a/public/experiments/angular/angular-api/search/searchdetails.view.html
+++ b/public/experiments/angular/angular-api/search/searchdetails.view.html
@@ -1,2 +1,11 @@
-<h2>Details</h2>
-{{restId}}
+<h2>{{rest.name}}</h2>
+<p>{{restId}}</p>
+<img ng-src="{{rest.image_url}}" class="pull-left"/>
+<p>
+    {{rest.snippet_text}}
+</p>
+<br/>
+
+<p>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</p>
+
+<p>{{rest.location.display_address[0]}}, {{rest.location.display_address[1]}}</p>
