--- a/public/experiments/angular/angular-api/index.html
+++ b/public/experiments/angular/angular-api/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
     <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+    <!--<script type="text/javascript" src="https://rawgit.com/bettiolo/oauth-signature-js/master/dist/oauth-signature.min.js"></script>-->
     <script src = "oauth.js"></script>
     <script src="app.js"></script>
     <script src="config.js"></script>
