fixed bugs in assignment 2 and worked on POC

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -48,5 +48,6 @@
     <script src="views/users/login.controller.js"></script>
     <script src="services/forms.service.client.js"></script>
     <script src="views/forms/forms.controller.js"></script>
+    <script src="views/admin/admin.controller.js"></script>
 </body>
 </html>
