--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -19,7 +19,6 @@
 <ng-include src = "'views/header/header.view.html'"></ng-include>
 <div class="container-fluid">
     <div class="row">
-
         <div ng-view></div>
     </div>
 </div>
@@ -35,9 +34,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>-->
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
+<script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+<script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
 <script src="app.js"></script>
 <script src="config.js"></script>
+<script src="oauth.js"></script>
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
+<script src="views/home/home.controller.js"></script>
+<script src="services/yelp.service.js"></script>
 </body>
 </html>
