fixed minor bugs in assignment and controller to config

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -19,7 +19,7 @@
     <ng-include src = "'views/header/header.view.html'"></ng-include>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar" ng-controller="SidebarController">
+            <div class="col-sm-3 col-md-2 sidebar">
                 <ng-include src= "'views/sidebar/sidebar.view.html'"></ng-include>
             </div>
             <div ng-view></div>
