--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -43,6 +43,8 @@
 <script src="views/main/main.controller.js"></script>
 <script src="views/header/header.controller.js"></script>
 <script src="views/home/home.controller.js"></script>
+<script src="views/search/search.controller.js"></script>
 <script src="services/yelp.service.js"></script>
+<script src="views/search/searchdetails.controller.js"></script>
 </body>
 </html>
