created user services and user signup and login functinality for POC

--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -46,5 +46,8 @@
 <script src="views/search/search.controller.js"></script>
 <script src="services/yelp.service.js"></script>
 <script src="views/search/searchdetails.controller.js"></script>
+<script src="views/users/login.controller.js"></script>
+<script src="services/user.service.client.js"></script>
+<script src="views/users/register.controller.js"></script>
 </body>
 </html>
