worked on profile page for POC and other changes in sidebar

--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -11,6 +11,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/sidebar.css">
     <link rel = "stylesheet" href = "css/style.css">
 
 </head>
@@ -37,6 +38,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
 <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <script src="app.js"></script>
 <script src="config.js"></script>
 <script src="oauth.js"></script>
@@ -49,5 +52,6 @@
 <script src="views/users/login.controller.js"></script>
 <script src="services/user.service.client.js"></script>
 <script src="views/users/register.controller.js"></script>
+<script src="views/users/profile.controller.js"></script>
 </body>
 </html>
