designed POC for profile page and reviews page

--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -54,5 +54,6 @@
 <script src="services/user.service.client.js"></script>
 <script src="views/users/register.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
+<script src="views/users/reviews.controller.js"></script>
 </body>
 </html>
