--- a/public/experiments/angular/angular-api/search/searchhome.view.html
+++ b/public/experiments/angular/angular-api/search/searchhome.view.html
@@ -1,46 +1,46 @@
-<!-- Half Page Image Background Carousel Header -->
-<header id="myCarousel" class="carousel slide">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+<div id="carousel" class="carousel slide" data-ride="carousel">
+    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+        <div class="row col-xs-12 searchbox width-colxs12 widthxsscreen">
+            <div class="col-sm-5 col-md-5">
+                <input ng-model="restname" type="text" class="form-control margin-searchbox"
+                       placeholder="Burger...Sushi(optional)"/>
+            </div>
+            <div class="col-sm-4 col-md-4">
+                <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
+            </div>
+            <div class="col-sm-3 col-md-3">
+                <button ng-click="callSearch(restname,loc)" class="btn btn-primary btn-block">Find Food</button>
+            </div>
 
-    <!-- Wrapper for Slides -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <!-- Set the first background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 1</h2>
-            </div>
-        </div>
-        <div class="item">
-            <!-- Set the second background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 2</h2>
-            </div>
-        </div>
-        <div class="item">
-            <!-- Set the third background image using inline CSS below. -->
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 3</h2>
-            </div>
         </div>
     </div>
+    <!-- Menu -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel" data-slide-to="1"></li>
+        <li data-target="#carousel" data-slide-to="2"></li>
+    </ol>
 
-    <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="icon-prev"></span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="icon-next"></span>
-    </a>
+    <!-- Items -->
+    <div class="carousel-inner">
 
-</header>
+        <div class="item active">
+            <img src="http://lorempixel.com/1500/600/abstract/1" alt="Slide 1" />
+        </div>
+        <div class="item">
+            <img src="http://lorempixel.com/1500/600/abstract/2" alt="Slide 2" />
+        </div>
+        <div class="item">
+            <img src="http://lorempixel.com/1500/600/abstract/3" alt="Slide 3" />
+        </div>
+    </div>
+    <a href="#carousel" class="left carousel-control" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a href="#carousel" class="right carousel-control" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+</div>
 <!-- Page Content -->
 <div class="container">
     <!-- Page Heading -->
