worked on improving the carousel for different screen sizes using media query

--- a/public/experiments/angular/angular-api/search/searchhome.view.html
+++ b/public/experiments/angular/angular-api/search/searchhome.view.html
@@ -25,13 +25,13 @@
     <div class="carousel-inner">
 
         <div class="item active">
-            <img src="http://lorempixel.com/1500/600/abstract/1" alt="Slide 1" />
+            <img class="banner1" src="/experiments/angular/angular-api/images/pepper_1920x1080.jpg" alt="Slide 1" />
         </div>
         <div class="item">
-            <img src="http://lorempixel.com/1500/600/abstract/2" alt="Slide 2" />
+            <img class="banner2" src="/experiments/angular/angular-api/images/breakfast_1920x1080.jpg" alt="Slide 2" />
         </div>
         <div class="item">
-            <img src="http://lorempixel.com/1500/600/abstract/3" alt="Slide 3" />
+            <img class="banner3" src="/experiments/angular/angular-api/images/food_1920x800.jpg" alt="Slide 3" />
         </div>
     </div>
     <a href="#carousel" class="left carousel-control" data-slide="prev">
