--- a/public/experiments/angular/angular-api/index.html
+++ b/public/experiments/angular/angular-api/index.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="RestApp">
 <head>
+    <meta charset="UTF-8">
+    <!-- IE Edge Meta Tag -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Viewport : This is for the display on smaller devices such as mobile, tab etc.-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/half-slider.css"/>
     <link rel="stylesheet" href="css/4-col-portfolio.css"/>
