renamed admin controller to admin.user.controller and same with the view. updated these changes in index and config files.

--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -55,6 +55,6 @@
 <script src="views/users/register.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
 <script src="views/users/reviews.controller.js"></script>
-<script src="views/admin/admin.controller.js"></script>
+<script src="views/admin/admin.user.controller.js"></script>
 </body>
 </html>
