Added star rating functionality using ng-rating directive in experiments

--- a/public/experiments/angular/angular-api/index.html
+++ b/public/experiments/angular/angular-api/index.html
@@ -8,24 +8,14 @@
     <!-- Viewport : This is for the display on smaller devices such as mobile, tab etc.-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!--<link href="https://rawgit.com/esleducation/ng-rating/master/css/ng-rating.css" rel="stylesheet"/>-->
+    <link href="css/ng-rating.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/half-slider.css"/>
     <link rel="stylesheet" href="css/4-col-portfolio.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <!-- jQuery -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
-    <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
-    <script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
-    <!--<script type="text/javascript" src="https://rawgit.com/bettiolo/oauth-signature-js/master/dist/oauth-signature.min.js"></script>-->
-    <script src = "oauth.js"></script>
-    <script src="app.js"></script>
-    <script src="config.js"></script>
-    <script src="navigation/navigation.controller.js"></script>
-    <script src="search/search.controller.js"></script>
-    <script src="search/searchdetails.controller.js"></script>
-    <script src="search/searchhome.controller.js"></script>
-    <script src="services/yelp.service.js"></script>
-    <script src="services/foursquare.service.js"></script>
 
 
     <meta charset="UTF-8">
@@ -53,4 +43,19 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>
+<script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/oauth.js"></script>
+<script type="text/javascript" src="http://oauth.googlecode.com/svn/code/javascript/sha1.js"></script>
+<!--<script type="text/javascript" src="https://rawgit.com/bettiolo/oauth-signature-js/master/dist/oauth-signature.min.js"></script>-->
+<script src = "oauth.js"></script>
+<script src="app.js"></script>
+<script src="config.js"></script>
+<script src="navigation/navigation.controller.js"></script>
+<script src="search/search.controller.js"></script>
+<script src="search/searchdetails.controller.js"></script>
+<script src="search/searchhome.controller.js"></script>
+<script src="services/yelp.service.js"></script>
+<script src="services/foursquare.service.js"></script>
+<script src="https://rawgit.com/esleducation/ng-rating/master/js/ng-rating.js"></script>
 </html>
