--- a/public/experiments/angular/angular-api/search/searchdetails.view.html
+++ b/public/experiments/angular/angular-api/search/searchdetails.view.html
@@ -9,3 +9,88 @@
 <p>{{rest.categories[0][0]}} | {{rest.categories[1][0]}}</p>
 
 <p>{{rest.location.display_address[0]}}, {{rest.location.display_address[1]}}</p>
+
+<div class="panel panel-default margin-panel">
+    <div class="panel-heading">
+        <h3 class="panel-title">Reviews for {{rest.name}}</h3>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <!-- Blog Comments -->
+
+            <!-- Comments Form -->
+            <div class="well margin-well" ng-repeat="rate in defaultRating">
+                <h4>Start your review!</h4>
+                <!--<i class="fa fa-star-o fa-lg"></i>-->
+                <!--<i class="fa fa-star-o fa-lg"></i>-->
+                <!--<i class="fa fa-star-o fa-lg"></i>-->
+                <!--<i class="fa fa-star-o fa-lg"></i>-->
+                <!--<i class="fa fa-star-o fa-lg"></i>-->
+                <ng-rating ng-model="rate.rating"
+                           icon-class="rate.iconClass"
+                           editable="rate.editableRating"
+                           stars-count="rate.starsCount"
+                           based-on="rate.basedOn"
+                           show-grade="rate.showGrade">
+                </ng-rating>
+                <form role="form">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+
+            <!-- Posted Comments -->
+
+            <!-- Comment -->
+            <div class="media margin-well">
+                <a class="pull-left" href="#">
+                    <img class="media-object" src="http://placehold.it/64x64" alt="">
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">Sanjiv Kumar
+                        <i class="fa fa-check-circle"></i>
+                        <small>Follow</small>
+                    </h4>
+                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante
+                    sollicitudin commodo.
+                    <i class="fa fa-flag pull-right"></i>
+                    <div class="row">
+                        <div class="col-xs-8">
+                            <i class="fa fa-star fa-lg"></i>
+                            <i class="fa fa-star fa-lg"></i>
+                            <i class="fa fa-star fa-lg"></i>
+                            <i class="fa fa-star-o fa-lg"></i>
+                            <i class="fa fa-star-o fa-lg"></i>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container" style="text-align:center;">
+
+    <!--<div class="jumbotron">-->
+        <!--<h1>ESL - ng-rating</h1>-->
+    <!--</div>-->
+
+    <ul class="list-unstyled">
+        <li ng-repeat="rating in ratings" style="margin-bottom:50px">
+            <h1>{{ rating.title }}</h1>
+            <ng-rating ng-model="rating.rating"
+                       icon-class="rating.iconClass"
+                       editable="rating.editableRating"
+                       stars-count="rating.starsCount"
+                       based-on="rating.basedOn"
+                       show-grade="rating.showGrade">
+            </ng-rating>
+            <p>{{ rating.description }}</p>
+        </li>
+    </ul>
+
+</div>
