--- a/public/experiments/angular/angular-api/search/searchdetails.view.html
+++ b/public/experiments/angular/angular-api/search/searchdetails.view.html
@@ -35,16 +35,16 @@
                 </ng-rating>
                 <form role="form">
                     <div class="form-group">
-                        <textarea class="form-control" rows="3"></textarea>
+                        <textarea class="form-control" ng-model="review" rows="3"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button ng-click="addReview(rate.rating, review)" class="btn btn-primary">Submit</button>
                 </form>
             </div>
 
             <!-- Posted Comments -->
 
             <!-- Comment -->
-            <div class="media margin-well">
+            <div class="media margin-well" ng-repeat="content in ratings">
                 <a class="pull-left" href="#">
                     <img class="media-object" src="http://placehold.it/64x64" alt="">
                 </a>
@@ -53,20 +53,27 @@
                         <i class="fa fa-check-circle"></i>
                         <small>Follow</small>
                     </h4>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante
-                    sollicitudin commodo.
+                    {{content.description}}
                     <i class="fa fa-flag pull-right"></i>
                     <div class="row">
                         <div class="col-xs-8">
-                            <i class="fa fa-star fa-lg"></i>
-                            <i class="fa fa-star fa-lg"></i>
-                            <i class="fa fa-star fa-lg"></i>
-                            <i class="fa fa-star-o fa-lg"></i>
-                            <i class="fa fa-star-o fa-lg"></i>
+                            <!--<i class="fa fa-star fa-lg"></i>-->
+                            <!--<i class="fa fa-star fa-lg"></i>-->
+                            <!--<i class="fa fa-star fa-lg"></i>-->
+                            <!--<i class="fa fa-star-o fa-lg"></i>-->
+                            <!--<i class="fa fa-star-o fa-lg"></i>-->
+                            <ng-rating ng-model="content.rating"
+                                       icon-class="content.iconClass"
+                                       editable="content.editableRating"
+                                       stars-count="content.starsCount"
+                                       based-on="content.basedOn"
+                                       show-grade="content.showGrade">
+                            </ng-rating>
                         </div>
 
                     </div>
                 </div>
+                <hr>
             </div>
         </div>
     </div>
