--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -56,5 +56,6 @@
 <script src="views/users/profile.controller.js"></script>
 <script src="views/users/reviews.controller.js"></script>
 <script src="views/admin/admin.user.controller.js"></script>
+<script src="services/reviews.service.client.js"></script>
 </body>
 </html>
