Added functionality to add review and ratings in search details page. created review service for dummy review data and linked it to avana-sushi and pho-basil restaurant for testing purposes

--- a/public/project-angular/index.html
+++ b/public/project-angular/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel = "stylesheet" href = "css/style.css">
+    <link rel = "stylesheet" href = "css/ng-rating.css">
 
 </head>
 
@@ -57,5 +58,6 @@
 <script src="views/users/reviews.controller.js"></script>
 <script src="views/admin/admin.user.controller.js"></script>
 <script src="services/reviews.service.client.js"></script>
+<script src="js/ng-rating.js"></script>
 </body>
 </html>
