Renamed project folder name

--- a/public/project-old/index.html
+++ b/public/project-old/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel = "stylesheet" href = "css/style.css">
-    <link rel = "stylesheet" href = "css/ng-rating.css">
 
 </head>
 
@@ -55,9 +54,6 @@
 <script src="services/user.service.client.js"></script>
 <script src="views/users/register.controller.js"></script>
 <script src="views/users/profile.controller.js"></script>
-<script src="views/users/reviews.controller.js"></script>
-<script src="views/admin/admin.user.controller.js"></script>
-<script src="services/reviews.service.client.js"></script>
-<script src="js/ng-rating.js"></script>
+<script src="views/admin/admin.controller.js"></script>
 </body>
 </html>
